# Python-D1

./: README.md  d1_python.ipynb  pyproject.toml  requirements.txt
data/: audiences_tv.xlsx  temps_parole_media.csv
