[project]
name = "d1-python-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.4",
    "lxml>=5.3.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "prophet>=1.1.6",
    "seaborn>=0.13.2",
]
